MB-19939: Fixed Clang compiler warnings in superblock.cc

Fixed warnings generated by
 -Wconversion
 -Wshorten-64-to-32
 -Wmissing-prototypes

Change-Id: I394ce3f3bea4bf10231e9da03d83a0bcad0eb637
Reviewed-on: http://review.couchbase.org/64939
Tested-by: buildbot <build@couchbase.com>
Reviewed-by: Chiyoung Seo <chiyoung@couchbase.com>